ALB-Ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ex
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/subnets: subnet-050352a21fb2cd155,subnet-0950c5949d81d6cd3,subnet-05704d919f2e905e5
    alb.ingress.kubernetes.io/shield-advanced-protection: "true"
    # wafv2 arn to use
    # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-2:660250927410:regional/webacl/waf-demo/6565d2a1-6d26-4b6b-b56f-1e996c7e9e8f
  labels:
    app: django-ex
spec:
  rules:
    - host: "django-demo.apps.ocpaws.melbourneopenshift.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: django-ex
                port:
                  number: 8080
